fix: z-index in logo on header

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -14,4 +14,5 @@
 .logo {
     object-fit: cover;
     margin-top: 50px;
+    z-index: 10;
 }
